# fakenes

./: CHANGES  INSTALL  LICENSE  License.txt  Makefile  Makefile.in  README  Readme.txt  SOURCE  SUPPORT  cbuild.c  config.bat  configure  configure.c  configure.in  default.cbd  make-djgpp.bat  make-mingw32.bat
Frameworks/: Disclaimer.txt
Frameworks/HawkNL/: hawknl.dsp  hawknl_static.dsp
Frameworks/HawkNL/include/: nl.h
Frameworks/HawkNL/src/: condition.c  err.c  errorstr.c  group.c  ipx.c  loopback.c  makefile.linux  makefile.osx  mutex.c  nl.c  sock.c  thread.c
Frameworks/HawkThreads/: HTtest1.dsp  HTtest2.dsp  HawkThreads.dsp  HawkThreads.dsw  HawkThreads.opt
Frameworks/HawkThreads/include/: hawklib.h  hawkthreads.h
Frameworks/HawkThreads/samples/: HTtest1.c  HTtest2.c
Frameworks/HawkThreads/src/: HTchanges.txt  HTreadme.txt  htcondition.c  hthread.c  htinternal.h  htmutex.c
Frameworks/zlib/: adler32.d  compress.d  crc32.d  deflate.d  gzclose.d  gzlib.d  gzread.d  gzwrite.d
Resources/: .directory  Windows.rc
Sources/Audio/: APU.cpp  APU.h  APUAtoms.hpp  Audio.cpp  Audio.h  AudioLib.cpp  AudioLib.h  AudioLib.hpp  AudioLibAtoms.hpp  Common.hpp  ExSound.cpp  ExSound.hpp  Internals.h  Local.hpp  MMC5.cpp  MMC5.hpp  VRC6.cpp  VRC6.hpp
Sources/Common/: Binary.h  Common.h  Debug.h  Global.h  Inline.h  Math.h  Types.h  Version.h
Sources/Core/: CPU.cpp  CPU.cpp.old  CPU.h  Common.hpp  Core.cpp  Core.hpp  Internals.h  Local.hpp  Patch.cpp  Patch.h  Readme.txt  Templates.hpp
Sources/Core/Templates/: Addressing.tpl  Context.tpl  Instructions.tpl  Interrupts.tpl  Main.tpl  Memory.tpl  Opcodes.tpl  Step.tpl
Sources/GUI/: File.h  GUI.c  GUI.h  Menus.h  Objects.h  Themes.h  Utility.h
Sources/Mappers/: AxROM.cpp  Bandai.cpp  ColorDreams.cpp  FFE_F3.cpp  Internals.h  Local.hpp  MMC3And6.cpp  MMC3And6.h  MMC5.cpp  VRC6.cpp  VRC6.h
Sources/Network/: NetPlay.c  NetPlay.h
Sources/Platform/: Config.c  Config.h  Configuration.c  Configuration.h  File.cpp  File.h  Load.c  Load.h  Local.hpp  Log.c  Log.h  Platform.c  Platform.h  Save.c  Save.cpp  Save.h  Unzip.c
Sources/System/: Cheats.h  Input.h  Machine.c  Machine.h  Main.c  Main.h  Mapper.c  Mapper.h  NSF.cpp  NSF.h  ROM.c  ROM.h  Rewinder.c  Rewinder.h  Timing.c  Timing.h
Sources/Toolkit/: CRC32.cpp  CRC32.h  File.cpp  File.h  MD5.c  MD5.h  Unicode.cpp  Unicode.h
Sources/Video/: Background.cpp  Background.hpp  Background.txt  Color.cpp  Color.h  HQ2X.asm  HQ3X.asm  HQ4X.asm  HQX.cpp  HQX.hpp  Internals.h  Local.hpp  NTSC.c  NTSC.cpp  NTSC.h  NTSC.hpp  PPU.cpp  PPU.h  Renderer.cpp  Renderer.hpp  Sprites.cpp  Sprites.hpp  Video.cpp  Video.h
docs/: CHANGES  INSTALL  README  faq.html
src/: Makefile.in  alstream.c  apu.c  apu.cpp  audio.c  audio.cpp  audiolib.c  audiolib.cpp  config.c  core.c  coreoff.c  corex86.asm  cpu.c  crc.c  crc32.c  data.c  dsp.c  gui.c  hq2x.c  hq3x.c  hq4x.c  hqx.c  input.c  log.c  machine.c  main.c  mmc.c  nes_ntsc.c  net.c  netplay.c  nsf.cpp  papu.c  platform.c  ppu.c  ppu.cpp  rewind.c  rom.c  save.c  timing.c  video.c  (+1 more)
src/Core/: CPU.cpp  CPU.h  Common.hpp  Core.cpp  Core.hpp  Internals.h  Readme.txt  Templates.hpp
src/Core/Templates/: Addressing.tpl  Context.tpl  Instructions.tpl  Interrupts.tpl  Main.tpl  Memory.tpl  Opcodes.tpl  Step.tpl
src/include/: alstream.h  apu.h  apu_ex.h  apu_int.h  audio.h  audio_int.h  audiolib.h  build.h  cheats.h  color.h  common.h  config.h  config.h.in  core.h  cpu.h  cpu_in.h  crc.h  crc32.h  data.h  data2.h  datafile.h  debug.h  dsp.h  genie.h  gui.h  gui2.h  input.h  log.h  machine.h  main.h  misc.h  mmc.h  nes_ntsc.h  net.h  netplay.h  nsf.h  papu.h  platform.h  ppu.h  ppu_int.h  (+7 more)
src/include/apu/: fds.h  fme7.h  mmc5.h  mmc5.hpp  n106.h  shared.h  shared.hpp  vrc6.h  vrc6.hpp  vrc7.h
src/include/blit/: 2xscl.h  2xsoe.h  des.h  hq.h  hqx.h  interp.h  interp2x.h  interp3x.h  ntsc.h  s2xscl.h  s2xsoe.h  shared.h  std.h  u2xscl.h
src/include/core/: addr.h  codes.h  insns.h  memory.h  tables.h
src/include/core/x86/: addr.inc  codes.inc  insns.inc
src/include/gui/: dialogs.h  file.h  menus.h  objects.h  themes.h  util.h
src/include/mmc/: aorom.h  bandai.h  cnrom.h  dreams.h  ffe_f3.h  gnrom.h  mmc1.h  mmc2.h  mmc2and4.h  mmc3.h  mmc4.h  mmc5.h  nina.h  none.h  shared.h  sunsoft.h  sunsoft4.h  unrom.h  vrc6.h
src/include/ppu/: backgrnd.h  sprites.h  tiles.h
src/renderer/: background.cpp  background.hpp  renderer.cpp  renderer.hpp  sprites.cpp  sprites.hpp
src/shared/: bufferfile.cpp  bufferfile.h  crc32.cpp  crc32.h
src/sound/: Common.hpp  MMC5.cpp  MMC5.hpp  SoundInternals.hpp  Sourcer.hpp  VRC6.cpp  VRC6.hpp  mmc5.cpp  mmc5.hpp  sound.cpp  sound.hpp  vrc6.cpp  vrc6.hpp
src/support/: coreoff.c  fakenes.rc
support/: hello.nes  icon.c  resource.bat
support/art/: cursors.xcf  fireflower.xcf  panta.xcf  stainless.xcf  zero4.xcf
support/art/legacy/: font.pcx  panta.pcx  stainless.pcx  zero4.pcx
