dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)
AC_PREREQ(2.12)
AC_CONFIG_HEADER(src/include/config.h)

AC_MSG_WARN(ignoring --prefix if it is present)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(MAKE, make, make)
AC_PATH_PROG(RM, rm, rm)

dnl Checks for libraries.
AC_ARG_WITH(zlib,   [  --with-zlib             build with ZIP and gzip support [default=yes]], [USE_ZLIB=$enableval], [USE_ZLIB=yes])
AC_ARG_WITH(hawknl, [  --with-hawknl           build with NetPlay support [default=yes]], [USE_HAWKNL=$enableval], [USE_HAWKNL=yes])

AC_MSG_CHECKING(whether to enable ZIP and gzip support)

if [[ "x$USE_ZLIB" = "xyes" ]]; then
    DFLAGS="$DFLAGS -DUSE_ZLIB"
	AC_MSG_RESULT(yes)

    LIBRARIES="$LIBRARIES -lz"

    echo if this is not what you want, use --without-zlib
else
	AC_MSG_RESULT(no)

    echo if this is not what you want, use --with-zlib
fi

AC_MSG_CHECKING(whether to enable NetPlay support)

if [[ "x$USE_HAWKNL" = "xyes" ]]; then
    DFLAGS="$DFLAGS -DUSE_HAWKNL"
	AC_MSG_RESULT(yes)

    LIBRARIES="$LIBRARIES -lNL"

    echo if this is not what you want, use --without-hawknl
else
	AC_MSG_RESULT(no)

    echo if this is not what you want, use --with-hawknl
fi

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN

dnl Set DFLAGS to -DLSB_FIRST if on a little endian platform,
dnl otherwise do nothing.

if test "$ac_cv_c_bigendian" != yes; then
    DFLAGS="$DFLAGS -DLSB_FIRST"
fi

dnl There is also the data type definitions that need to be
dnl handled by using configure to detect size.
AC_CHECK_SIZEOF(short int)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long int)

dnl Checks for library functions.

AC_SUBST(MAKE)
AC_SUBST(RM)

AC_SUBST(EXEEXT)

AC_SUBST(DFLAGS)
AC_SUBST(LIBRARIES)

AC_OUTPUT(Makefile src/Makefile)

echo type \'make install\' to build and install FakeNES.
