dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)
AC_PREREQ(2.12)
AC_CONFIG_HEADER(src/include/config.h)

AC_MSG_WARN(ignoring --prefix if it is present)

AC_PROG_CC

dnl Should probably try non-GNU tools...
AC_PATH_PROGS(MAKE, make gmake, make)
AC_PATH_PROG(MKDIR, mkdir, mkdir)
AC_PATH_PROG(RMDIR, rmdir, rmdir)
AC_PATH_PROG(RM, rm, rm)
AC_PATH_PROGS(INSTALL, install ginstall, install)
AC_PATH_PROG(CHMOD, chmod, chmod)

dnl Docs say autoconf defines these, I say otherwise.
AC_MSG_CHECKING(for executable file suffix)
EXEEXT="$ac_exeext"
if [[ "x$EXEEXT" = "x" ]]; then
    AC_MSG_RESULT(none)
else
    AC_MSG_RESULT("$EXEEXT")
    EXEEXT=".$EXEEXT"
fi

AC_MSG_CHECKING(for object file suffix)
OBJEXT="$ac_objext"
if [[ "x$OBJEXT" = "x" ]]; then
    AC_MSG_RESULT(none)
else
    AC_MSG_RESULT("$OBJEXT")
    OBJEXT=".$OBJEXT"
fi

AC_ARG_WITH(zlib,   [  --with-zlib             build with ZIP and gzip support [default=yes]], [USE_ZLIB=$withval], [USE_ZLIB=yes])
AC_ARG_WITH(hawknl, [  --with-hawknl           build with NetPlay support [default=no]], [USE_HAWKNL=$withval], [USE_HAWKNL=no])
AC_ARG_WITH(openal, [  --with-openal           build with OpenAL support [default=no]], [USE_OPENAL=$withval], [USE_OPENAL=no])

AC_MSG_CHECKING(whether to enable ZIP and gzip support)
if [[ "x$USE_ZLIB" = "xyes" ]]; then
    DFLAGS="$DFLAGS -DUSE_ZLIB"
    AC_MSG_RESULT(yes)
    LIBRARIES="$LIBRARIES -lz"
    echo if this is not what you want, use --without-zlib
else
    AC_MSG_RESULT(no)
    echo if this is not what you want, use --with-zlib
fi

AC_MSG_CHECKING(whether to enable NetPlay support)
if [[ "x$USE_HAWKNL" = "xyes" ]]; then
    DFLAGS="$DFLAGS -DUSE_HAWKNL"
    AC_MSG_RESULT(yes)
    LIBRARIES="$LIBRARIES -lNL"
    echo if this is not what you want, use --without-hawknl
else
    AC_MSG_RESULT(no)
    echo if this is not what you want, use --with-hawknl
fi

AC_MSG_CHECKING(whether to enable OpenAL support)
if [[ "x$USE_OPENAL" = "xyes" ]]; then
    DFLAGS="$DFLAGS -DUSE_OPENAL"
    AC_MSG_RESULT(yes)
    LIBRARIES="$LIBRARIES `openal-config --libs`"
    echo if this is not what you want, use --without-openal
else
    AC_MSG_RESULT(no)
    echo if this is not what you want, use --with-openal
fi

dnl Add -DLSB_FIRST to DFLAGS if on a little endian platform.
AC_C_BIGENDIAN
if test "$ac_cv_c_bigendian" != yes; then
    DFLAGS="$DFLAGS -DLSB_FIRST"
fi

AC_CHECK_SIZEOF(short int)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long int)

AC_SUBST(MAKE)
AC_SUBST(MKDIR)
AC_SUBST(RMDIR)
AC_SUBST(RM)
AC_SUBST(CHMOD)
AC_SUBST(INSTALL)
AC_SUBST(EXEEXT)
AC_SUBST(OBJEXT)
AC_SUBST(DFLAGS)
AC_SUBST(LIBRARIES)

AC_OUTPUT(Makefile src/Makefile)

echo type \'make all\' to just build FakeNES
echo type \'make all install\' to build and install FakeNES
